Fix: home icon information Firefox/IE

--- a/app/assets/stylesheets/modules/map/_layer-nav.scss
+++ b/app/assets/stylesheets/modules/map/_layer-nav.scss
@@ -124,6 +124,7 @@ $stories-color: rgb(242, 178, 87);
           width: 10px;
           height: 10px;
           @include home-icons-sprite(information);
+          background: image-url('home-icons/information.png');
 
           &.hidden {
             display: none;
